@@ -17,8 +17,8 @@ import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
 
 import java.io.IOException;
-import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.List;
 
@@ -31,21 +31,15 @@ public class CategoryServiceImpl implements CategoryService {
 
     @Override
     public List<Category> findByParentId(Long parentId) {
-
         // 根据分类id查询它下面的所有的子分类数据
         List<Category> categoryList = categoryMapper.selectByParentId(parentId);
         if (!CollectionUtil.isEmpty(categoryList)) {
 
             // 遍历分类的集合，获取每一个分类数据
             categoryList.forEach(item -> {
-
                 // 查询该分类下子分类的数量
                 int count = categoryMapper.countByParentId(item.getId());
-                if (count > 0) {
-                    item.setHasChildren(true);
-                } else {
-                    item.setHasChildren(false);
-                }
+                item.setHasChildren(count > 0);
 
             });
         }
@@ -54,6 +48,7 @@ public class CategoryServiceImpl implements CategoryService {
 
     @Override
     public void exportData(HttpServletResponse response) {
+        log.info("开始导出分类数据");
         try {
 
             // 设置响应结果类型
@@ -61,7 +56,7 @@ public class CategoryServiceImpl implements CategoryService {
             response.setCharacterEncoding("utf-8");
 
             // 这里URLEncoder.encode可以防止中文乱码 当然和easyexcel没有关系
-            String fileName = URLEncoder.encode("分类数据", "UTF-8");
+            String fileName = URLEncoder.encode("分类数据", StandardCharsets.UTF_8);
             response.setHeader("Content-disposition", "attachment;filename=" + fileName + ".xlsx");
             //response.setHeader("Access-Control-Expose-Headers", "Content-Disposition");
 
@@ -70,14 +65,15 @@ public class CategoryServiceImpl implements CategoryService {
             List<CategoryExcelVo> categoryExcelVoList = new ArrayList<>(categoryList.size());
 
             // 将从数据库中查询到的Category对象转换成CategoryExcelVo对象
-            for(Category category : categoryList) {
+            for (Category category : categoryList) {
                 CategoryExcelVo categoryExcelVo = new CategoryExcelVo();
                 BeanUtils.copyProperties(category, categoryExcelVo, CategoryExcelVo.class);
                 categoryExcelVoList.add(categoryExcelVo);
             }
 
             // 写出数据到浏览器端
-            EasyExcel.write(response.getOutputStream(), CategoryExcelVo.class).sheet("分类数据").doWrite(categoryExcelVoList);
+            EasyExcel.write(response.getOutputStream(), CategoryExcelVo.class).sheet("分类数据")
+                    .doWrite(categoryExcelVoList);
 
         } catch (IOException e) {
             e.printStackTrace();
